[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/cargadorInfo.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/guns/akCharger.svg" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/guns/gunCharger.svg" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/guns/sniperCharger.svg" type="Texture" id=4]
[ext_resource path="res://temas/message.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[sub_resource type="Animation" id=2]
resource_name = "drop"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationReciver:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, -40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationReciver:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}

[node name="Cargador" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationReciver" type="Node2D" parent="."]
position = Vector2( 0, -40 )

[node name="Sprites" type="Node2D" parent="AnimationReciver"]
editor/display_folded = true
scale = Vector2( 0.5, 0.5 )

[node name="AkCharger" type="Sprite" parent="AnimationReciver/Sprites"]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="GunCharger" type="Sprite" parent="AnimationReciver/Sprites"]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="SniperCharger" type="Sprite" parent="AnimationReciver/Sprites"]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="AnimationReciver"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimationReciver/Area2D"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="AnimationReciver"]
visible = false
margin_left = 17.45
margin_top = 20.19
margin_right = 117.45
margin_bottom = 50.19
color = Color( 0, 0, 0, 0.560784 )

[node name="Label" type="Label" parent="AnimationReciver/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
text = "Press E to take"
align = 3
valign = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/drop = SubResource( 2 )
[connection signal="body_entered" from="AnimationReciver/Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="AnimationReciver/Area2D" to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="AnimationReciver/Area2D" to="." method="_on_arma_body_entered"]
[connection signal="mouse_exited" from="AnimationReciver/Area2D" to="." method="_on_arma_body_exited"]
